package com.example.app16.ui.main;

//stale class
public class analyseVO
{ 

  public analyseVO() {}

}


